# ChangeLog for dev-python/charade
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/charade/ChangeLog,v 1.8 2013/09/29 11:30:43 ago Exp $

  29 Sep 2013; Agostino Sarubbo <ago@gentoo.org> charade-1.0.3.ebuild:
  Stable for amd64, wrt bug #470630

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> charade-1.0.3.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  11 Aug 2013; Jeroen Roovers <jer@gentoo.org> charade-1.0.3.ebuild:
  Marked ~hppa too.

  16 May 2013; Markus Meier <maekke@gentoo.org> charade-1.0.3.ebuild:
  add ~arm, bug #447650

  29 Apr 2013; Ian Delaney <idella4@gentoo.org> charade-1.0.3.ebuild:
  pypy support added

*charade-1.0.3 (18 Jan 2013)

  18 Jan 2013; Mike Gilbert <floppym@gentoo.org> +charade-1.0.3.ebuild,
  -charade-1.0.1.ebuild:
  Version bump, fixes bug 452466. Thanks to Ian Cordasco for the quick fix.

  21 Dec 2012; Michał Górny <mgorny@gentoo.org> charade-1.0.1.ebuild:
  Use PYTHON_USEDEP to properly request implementation support in deps.

*charade-1.0.1 (17 Dec 2012)

  17 Dec 2012; Tim Harder <radhermit@gentoo.org> +charade-1.0.1.ebuild,
  +metadata.xml:
  Initial import, ebuild by me.