@@ -2,23 +2,23 @@
 Hash: SHA512
 
 DIST charade-1.0.3.tar.gz 168537 SHA256 a607146d151005904f3fd8335e3dc89af214453f0d3a29580e1eb0e67e6c3d7f SHA512 203c8d151b9b2530753fb2c4b2dd91b2d63cf01c0aba80ebe450d75ce7cda3ac0612e8ad3a41a0f8498aec63cd5c3a3d6493975efefc45f6c6310e76a9cdf553 WHIRLPOOL 08e99abc221b27d8cd6b5d29031a7ec052820c5e203c4f2102351a014230c44d35bc574bc7cf1c87c316f2ecd7c38edb33b410dfa388ad96f27e4b1e34182bcf
-EBUILD charade-1.0.3.ebuild 638 SHA256 895340c2f1cd9fbdd749cdca48ae318d6cd33fcd221eabaa468256274549b5ca SHA512 ab39b147958c138af6d7ce5b2eb81ab154ee1ecd462d2a257387d6820dc86033b210944dbb70f8113f05bc5f8f8da2b3678d589cd19089838786fdb22b60c745 WHIRLPOOL e7d649c489e6297844e3e69266db2f1b4b863696aba5fea5d2b1131f0f9696cb1a716f3392a295734d15bec90e560496ded967987ad323673c4b339f0eb62ac4
-MISC ChangeLog 1215 SHA256 42a5a9579a722572f8b3a1a2059a0e115bf06c0e813b848585ed619a9d887e58 SHA512 54eeecf2650f54f625123f3e5be9494b7b1b09f5981a486eb8078a2466c48eb01e8c5185b0de55739cc97e271e28ef77de805cfffc07f9465e5218941458acae WHIRLPOOL 1bff468b8a8383726aa526842f74826da88d1be485c484ef0113dc7a3dec13dd9f434e01784e7130e5e7ef89be1ab9af6361c694ed63cdb158220151c7c440e2
+EBUILD charade-1.0.3.ebuild 637 SHA256 62ac21afa8d6fe013788192276243a44a171bc43f450cbe19d10cefd90308d60 SHA512 89157c957f9f6c42372ea068c02f506c3693f2bc6b5726c62207a06a8ec4b641cc38cdfeead2962a65737d3ecb7efee31713a337bb2a0a9b85efa4db99aac0ce WHIRLPOOL 14fcd0b2c7eaaaa62905bf851c13ec0f0d6b60a79d069b1a3a2863b4dc4d31309a2208e1d7d31dbf6bdf4a90d9bf5a046a66c98b35f80ed71c0201e34fbd25de
+MISC ChangeLog 1321 SHA256 04e158e43b9e08cad5d7b827b3e135f3de67b8e7a43d5af94878405b292f5678 SHA512 5844649d687f1060c1bbbdf77b21c6e4f106b8393b1df4023abad847e237f07186704aa7a7f0ddbf3b09a8f4085f8c1f3ba734307444468f2b15bffe66c612ec WHIRLPOOL 4091af2fc0734970a978c80170b4da2ed2ff69ff354caf9e4e5162ad896d8475f3c93313b6777f63bae418eea1d0cc38562215c11454082f4697eaac89f0257f
 MISC metadata.xml 230 SHA256 e0bdb2500753564167f7181f96d95833652085908716782a344c38a062818d58 SHA512 3b406d9c69f1d42a250e15566cebce4ca3ea57a0a581f628858a17259c9276df7655f7122887ba04e00d6f664820fcf1670b950d12f30c91a4d5438e0921ea94 WHIRLPOOL be0be06f05a0f9f4fe585a2f08769ef23b78f0ecd58f7142308f08fed9f091a98e237119df22912e2059f4a082e06990bf338d442c635e83d7638c4c18eacfac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSSA9eAAoJELp701BxlEWfysgP/3+xEjeAAGl6L1HWaX2BABi3
-ALJqHpw6KH7hI/VD+HWYGTdk2H0tM4eGCSj9sBCgXXPBHptcVPJKO4ZZI8qP28uh
-x+XSNjF7NLroOBn4Qqd235i8vluSXsXaUkhvY0tBcNyRlZ1cAoB51zXywPWSGWmM
-q5RJJjA9OBxzBqkJ+vwLmCZITs0IpTIplwuJZqKuXxY2TTixZ1bEHKx6j0zsVRBy
-3ooZGJXadyDEHKQp+DPVjdsRes28tYvrBgrRo9k35RSjC/DifwK8SYP/u51HtE6L
-7Vxy0lR6TLUX4eeum3Ln3qBnHsUPZlFsFu2hi+2y4AOanCdT2de8Guj448fABGyh
-7YyEWnccau69WZdlvBJE9F65BP1JjiGfYfE1VA4ZWmpaHUjywZKTrjIkFoz13gqH
-kkhHfnZ5uejD2FQIwxnNthWka5IXG9fCO0cVGozYZ3AiEbcAEna+a7gQpMMGA93B
-aUOgtaZ1OWyquOw5DAzfqRSENVy45nt9ehsPg3a831ejOUy+/SbsyFhLbphtaEhE
-X85rNasaa3/hetm0Wt3dJtw5FZSW/pGU4jA3/0+F3e1cbhknvl37BwxSzOM+Ip7d
-4RXCEJPRUUgDes0OOcTxzYezfuhgajNMtNhgw7kEVNaxoKCWvguqtbvskInJ/RtH
-yDqjGdLrJpfECDsSlxna
-=176N
+iQIcBAEBCgAGBQJSSbIeAAoJELp701BxlEWfEPIP/31Se89VGeE7dNw8iX3r2qGn
+wHcurfHtsut5M4k2poceqaqn0ynmuskO3b0hY5CJtq/V5+juG9Epk1D7IZhlNUyk
+Y0HRfBELYHTQzuPtDz6rqXdQawsYkbKm33a355uWZRaWmMPKLbD8TSTT7Jrf7AX4
+ZlY6X3/OWQwlfVewqHHka529ubfqGGigyckpBa9kDUrVp8q6UcELiymBfgC2Lles
+4LlevOINWpIPZilPAyfDqMlex9vnirEywJCOmUSAYQPv/wRRiyc/rH88AmYp63wF
+fiMmiqlVbiYqDJL52G1eqStoucNfmD2B86Ny/WvFK05RbQZNq/znSRARpMgtzrHD
+x4/2acJ17jC100r3ubHXtT4oGxaVufud6hmf8MICRy4xO/7eGb1ugCCwwxmToYCh
+FeFQtqtEOjtclNxfY2Jjppl17ptcbEptVL5g4z7lsVrNgejhUVFAAvHaMXn4AWD4
+1aKjgEp72GgFusAM0pjBqa4ZWmZy/C4rh6vwxZWP5V2xG4Y8YQYJeaLJzd5i5s1C
+dNgqjiU83KtbEhmM26Z++unAKRIQRlomLeQjYE+928GCYiK136biNuqKJxebvp2u
+4SKBuZGw2zIOYF/eohH/gWCZGnroOU/zTY9piRsj0Hr/o/oJf6K1qAxHiYspM4Lv
+gQveJzo8IobwWJH7yl62
+=Mw1Q
 -----END PGP SIGNATURE-----
