@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/requests/requests-1.2.3.ebuild,v 1.4 2013/09/29 11:30:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/requests/requests-1.2.3.ebuild,v 1.5 2013/09/30 17:17:23 ago Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} pypy2_0 )
@@ -13,7 +13,7 @@ SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~hppa ~x86"
+KEYWORDS="amd64 ~arm ~hppa x86"
 IUSE="test"
 
 # bundles dev-python/urllib3 snapshot
