@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/charade
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/charade/ChangeLog,v 1.8 2013/09/29 11:30:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/charade/ChangeLog,v 1.9 2013/09/30 17:17:27 ago Exp $
+
+  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> charade-1.0.3.ebuild:
+  Stable for x86, wrt bug #470630
 
   29 Sep 2013; Agostino Sarubbo <ago@gentoo.org> charade-1.0.3.ebuild:
   Stable for amd64, wrt bug #470630
